// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should test Expense Total correctly 1`] = `
<div>
  <h2>
    <p>
       Viewing 
      1
       Number of expense with total 
      $2.35
       
    </p>
  </h2>
</div>
`;

exports[`Should test Expense Total correctly 2`] = `
<div>
  <h2>
    <p>
       Viewing 
      23
       Number of expense with total 
      $235,443.35
       
    </p>
  </h2>
</div>
`;
